# fast_splat

./: .clangd  .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  pyproject.toml  setup.py
.github/workflows/: build_wheels.yaml
examples/: README.md  depth.exr  depthDepth.exr  depth_of_field.py  profile_example.py  randomized_test.py  simple_usage.py
fast_splat_2d/: __init__.py
src/cpp/: CMakeLists.txt  fast_splat_2d.cpp
src/cpp/cpu/: fast_splat_2d_cpu.cpp  fast_splat_2d_cpu.h
src/cpp/cuda/: fast_splat_2d_cuda.cu  fast_splat_2d_cuda.h  utils.cu  utils.h
