[build-system]
requires = ["scikit-build-core>=0.10.0", "nanobind>=2.1.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fast_splat_2d"
version = "0.1.0"
description = "A fast function for 2D splatting into a target image. There is a cpu and a gpu backend, which is automatically selected based on where the inputs life. A binding for pytorch tensors is provided."
authors = [
    { name = "Raphael Braun", email = "keyraphi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "isort"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
# This ensures the .so file is placed inside the package folder
wheel.expand-macos-universal-tags = true
install.components = ["python_modules"]
wheel.install-dir = "fast_splat_2d"
